clarify on the differences between the signin component and JS reference for signin component

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -86,12 +86,66 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```js filename="sign-in.js"
-    window.Clerk.mountSignIn(
-      document.getElementById("sign-in")
-    );
-    window.Clerk.openSignIn();
-    ```
+    In the example below, the [`mountSignIn()`](/docs/references/javascript/clerk/sign-in#mount-sign-in) method is used to render the `<SignIn />` component to a `<div>` element with `id="sign-in"`.
+
+    To learn more about the methods available for rendering and controlling the `<SignIn />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-in).
+
+    <InjectKeys>
+
+    <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+      ```typescript
+      import Clerk from '@clerk/clerk-js';
+      import { dark } from "@clerk/themes";
+
+      // Add a <div> element with id="sign-in" to your HTML
+      document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
+        <div
+          id="sign-in"
+        >
+        </div>
+      `;
+
+      const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
+
+      // Initialize Clerk with your Clerk publishable key
+      const clerk = new Clerk(`{{pub_key}}`);
+      await clerk.load();
+
+      clerk.mountSignIn(signInComponent, {
+        appearance: {
+          baseTheme: dark
+        }
+      });
+      ```
+
+      ```html
+      <!-- Add a <div> element with id="sign-in" to your HTML -->
+      <div id="sign-in"></div>
+
+      <script>
+        const script = document.createElement('script');
+        // Set your Clerk publishable key
+        script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
+        script.async = true;
+        script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+
+        script.addEventListener('load', async function () {
+          await window.Clerk.load();
+
+          const signInComponent = document.querySelector('#sign-in');
+
+          window.Clerk.openSignIn(signInComponent, {
+            appearance: {
+              baseTheme: dark
+            }
+          });
+        });
+        document.body.appendChild(script);
+      </script>
+      ```
+    </CodeBlockTabs>
+
+    </InjectKeys>
   </Tab>  
 </Tabs>
 
