--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -1,36 +1,48 @@
 ---
 title: <SignIn /> component
-description: The <SignIn /> component renders a UI for signing in users. The functionality of the <SignIn /> component are controlled by the instance settings you specify in your Clerk Dashboard. You can further customize your <SignIn /> component by passing additional properties at the time of rendering.
+description: This reference describes the properties and methods related to Clerk's <SignIn /> component for a JavaScript application.
 ---
 
 # `<SignIn />` component
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
 
-The [`<SignIn />`][signin-ref] component renders a UI for signing in users. The functionality of the [`<SignIn />`][signin-ref] component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com). You can further customize your [`<SignIn />`][signin-ref] component by passing additional properties at the time of rendering.
+The [`<SignIn />`](/docs/components/authentication/sign-in) component renders a UI for signing in users. The functionality of the `<SignIn />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignIn />` component by passing additional properties at the time of rendering.
 
-> All of these are methods on [an instance of the `Clerk` class](/docs/references/javascript/clerk/clerk).
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<SignIn />` component:
+
+- [`mountSignIn()`](#mount-sign-in)
+- [`unmountSignIn()`](#unmount-sign-in)
+- [`openSignIn()`](#open-sign-in)
+- [`closeSignIn()`](#close-sign-in)
 
 ## `mountSignIn()`
 
-Render the [`<SignIn />`][signin-ref] component to an HTML `<div>` element.
+Render the `<SignIn />` component to an HTML `<div>` element.
 
-### Usage
+### `mountSignIn()` usage
+
+In the example below, the `<SignIn />` component is rendered to a `<div>` element with `id="sign-in"`. The `<SignIn />` component will be rendered with the default settings specified in your [Clerk Dashboard](https://dashboard.clerk.com).
+
+<InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {15-19}
+  ```typescript
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
+  // Add a <div> element with id="sign-in" to your HTML
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
       id="sign-in"
-    ></div>
+    >
+    </div>
   `;
 
   const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
 
-  const clerk = new Clerk('pk_[publishable_key]');
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
 
   clerk.mountSignIn(signInComponent, {
@@ -40,11 +52,14 @@ Render the [`<SignIn />`][signin-ref] component to an HTML `<div>` element.
   });
   ```
 
-  ```html {13-17}
+  ```html
+  <!-- Add a <div> element with id="sign-in" to your HTML -->
   <div id="sign-in"></div>
+
   <script>
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    // Set your Clerk publishable key
+    script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
     script.async = true;
     script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
 
@@ -64,7 +79,9 @@ Render the [`<SignIn />`][signin-ref] component to an HTML `<div>` element.
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+### `mountSignIn()` properties
 
 ```typescript
 function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
@@ -72,14 +89,14 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element used to render in the [`<SignIn />`][signin-ref] component |
-| `props?` | [`SignInProps`](#sign-in-props) | The properties to pass to the [`<SignIn />`][signin-ref] component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element used to render in the `<SignIn />` component |
+| `props?` | [`SignInProps`](#sign-in-props) | The properties to pass to the `<SignIn />` component |
 
 ## `unmountSignIn()`
 
-Unmount and run cleanup on an existing [`<SignIn />`][signin-ref] component instance.
+Unmount and run cleanup on an existing `<SignIn />` component instance.
 
-### Usage
+### `unmountSignIn()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
@@ -128,7 +145,7 @@ Unmount and run cleanup on an existing [`<SignIn />`][signin-ref] component inst
   ```
 </CodeBlockTabs>
 
-### Properties
+### `unmountSignIn()` properties
 
 ```typescript
 function unmountSignIn(node: HTMLDivElement): void;
@@ -142,7 +159,7 @@ function unmountSignIn(node: HTMLDivElement): void;
 
 Opens the `<SignIn />` component as an overlay at the root of your HTML `body` element.
 
-### Usage
+### `openSignIn()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {7-11}
@@ -180,7 +197,7 @@ Opens the `<SignIn />` component as an overlay at the root of your HTML `body` e
   ```
 </CodeBlockTabs>
 
-### Properties
+### `openSignIn()` properties
 
 ```typescript
 function openSignIn(props?: SignInProps): void;
@@ -194,7 +211,7 @@ function openSignIn(props?: SignInProps): void;
 
 Closes the sign in overlay.
 
-### Usage
+### `closeSignIn()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {11}
@@ -232,7 +249,7 @@ Closes the sign in overlay.
   ```
 </CodeBlockTabs>
 
-### Properties
+### `closeSignIn()` properties
 
 ```typescript
 function closeSignIn(): void;
@@ -251,5 +268,3 @@ All props below are optional.
 | `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
 | `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
 | `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
-
-[signin-ref]: /docs/components/authentication/sign-in
