fix organization typos

--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -25,7 +25,7 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
 
 ### `getOrganizationMembershipList({ limit })`
 
-Retrieves orgnanization membership list that is filtered by the number of results.
+Retrieves organization membership list that is filtered by the number of results.
 
 ```tsx
 const organizationId = 'my-organization-id';
@@ -39,7 +39,7 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
 
 ### `getOrganizationMembershipList({ offset })`
 
-Retrieves orgnanization membership list that is filtered by the number of results to skip.
+Retrieves organizaiton membership list that is filtered by the number of results to skip.
 
 ```tsx
 const organizationId = 'my-organization-id';
