--- a/docs/references/backend/organization/get-pending-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-pending-organization-invitation-list.mdx
@@ -25,7 +25,7 @@ const invitations = await clerkClient.organizations.getPendingOrganizationInvita
 
 ### `getPendingOrganizationInvitationList({ limit })`
 
-Retrieves orgnanization invitation list that is filtered by the number of results.
+Retrieves organization invitation list that is filtered by the number of results.
 
 ```tsx
 const organizationId = 'my-organization-id';
@@ -39,7 +39,7 @@ const invitations = await clerkClient.organizations.getPendingOrganizationInvita
 
 ### `getPendingOrganizationInvitationList({ offset })`
 
-Retrieves orgnanization invitation list that is filtered by the number of results to skip.
+Retrieves organization invitation list that is filtered by the number of results to skip.
 
 ```tsx
 const organizationId = 'my-organization-id';
