--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -229,190 +229,198 @@ So, in essence, when you want to authenticate users in your application, you nee
 
 Let's see the above in action. If you want to learn more about sign-ins, check out our documentation on Clerk's [sign-in flow](/docs/custom-flows/overview#sign-in-flow).
 
-<CodeBlockTabs options={["Next App Router", "React", "JavaScript"]}>
-```tsx filename="app/sign-in/page.tsx"
-'use client'
+<Tabs type="framework" items={["Next.js", "React", "JavaScript"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router"]}>
+      ```tsx filename="app/sign-in/page.tsx"
+      'use client'
 
-import * as React from 'react'
-import { useSignIn } from "@clerk/nextjs";
-import { PhoneCodeFactor, SignInFirstFactor } from '@clerk/types';
-import { useRouter } from 'next/navigation';
+      import * as React from 'react'
+      import { useSignIn } from "@clerk/nextjs";
+      import { PhoneCodeFactor, SignInFirstFactor } from '@clerk/types';
+      import { useRouter } from 'next/navigation';
 
-export default function Page() {
-  const { isLoaded, signIn, setActive } = useSignIn()
-  const [verifying, setVerifying] = React.useState(false)
-  const [phone, setPhone] = React.useState("")
-  const [code, setCode] = React.useState("")
-  const router = useRouter()
+      export default function Page() {
+        const { isLoaded, signIn, setActive } = useSignIn()
+        const [verifying, setVerifying] = React.useState(false)
+        const [phone, setPhone] = React.useState("")
+        const [code, setCode] = React.useState("")
+        const router = useRouter()
 
-  async function handleSubmit(e: React.FormEvent) {
-    e.preventDefault();
+        async function handleSubmit(e: React.FormEvent) {
+          e.preventDefault();
 
-    if (!isLoaded && !signIn) return null
+          if (!isLoaded && !signIn) return null
 
-    try {
-      // Start the Sign Up process using the phone number method
-      const { supportedFirstFactors } = await signIn.create({
-        identifier: phone,
-      });
+          try {
+            // Start the Sign Up process using the phone number method
+            const { supportedFirstFactors } = await signIn.create({
+              identifier: phone,
+            });
 
-      // Filter the returned array to find the 'phone_code' entry
-      const isPhoneCodeFactor = (
-        factor: SignInFirstFactor
-      ): factor is PhoneCodeFactor => {
-        return factor.strategy === "phone_code";
-      };
-      const phoneCodeFactor = supportedFirstFactors?.find(isPhoneCodeFactor);
+            // Filter the returned array to find the 'phone_code' entry
+            const isPhoneCodeFactor = (
+              factor: SignInFirstFactor
+            ): factor is PhoneCodeFactor => {
+              return factor.strategy === "phone_code";
+            };
+            const phoneCodeFactor = supportedFirstFactors?.find(isPhoneCodeFactor);
 
-      if (phoneCodeFactor) {
-        // Grab the phoneNumberId
-        const { phoneNumberId } = phoneCodeFactor
+            if (phoneCodeFactor) {
+              // Grab the phoneNumberId
+              const { phoneNumberId } = phoneCodeFactor
 
-        // Send the OTP code to the user
-        await signIn.prepareFirstFactor({
-          strategy: 'phone_code',
-          phoneNumberId
-        })
+              // Send the OTP code to the user
+              await signIn.prepareFirstFactor({
+                strategy: 'phone_code',
+                phoneNumberId
+              })
 
-        // Set 'verifying' true to display second form and capture the OTP code
-        setVerifying(true)
+              // Set 'verifying' true to display second form and capture the OTP code
+              setVerifying(true)
+            }
+          }
+          catch (err) {
+            // See https://clerk.com/docs/custom-flows/error-handling for more on error handling
+            console.error('Error:', JSON.stringify(err, null, 2))
+          }
+        }
+
+        async function handleVerification(e: React.FormEvent) {
+          e.preventDefault()
+
+          if (!isLoaded && !signIn) return null
+
+          try {
+            // Use the code provided by the user and attempt verification
+            const completeSignIn = await signIn.attemptFirstFactor({
+              strategy: 'phone_code',
+              code
+            })
+
+            // This mainly for debuggin while developing.
+            // Once your Instance is setup this should not be required.
+            if (completeSignIn.status !== 'complete') {
+              console.error(JSON.stringify(completeSignIn, null, 2))
+            }
+
+            // If verification was completed, create a session for the user
+            if (completeSignIn.status === 'complete') {
+              await setActive({ session: completeSignIn.createdSessionId });
+
+              // Redirect user 
+              router.push("/")
+            }
+          }
+          catch (err) {
+            // See https://clerk.com/docs/custom-flows/error-handling for more on error handling
+            console.error('Error:', JSON.stringify(err, null, 2))
+          }
+        }
+
+        if (verifying) {
+          return (
+            <form onSubmit={handleVerification}>
+              <label id="code">Code</label>
+              <input value={code} id="code" name="code" onChange={(e) => setCode(e.target.value)} />
+              <button type="submit">Verify</button>
+            </form>
+          )
+        }
+
+        return (
+          <form onSubmit={handleSubmit}>
+            <label id="phone">Phone</label>
+            <input value={phone} id="phone" name="phone" type="tel" onChange={(e) => setPhone(e.target.value)} />
+            <button type="submit">Send Code</button>
+          </form>
+        );
       }
-    }
-    catch (err) {
-      // See https://clerk.com/docs/custom-flows/error-handling for more on error handling
-      console.error('Error:', JSON.stringify(err, null, 2))
-    }
-  }
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-  async function handleVerification(e: React.FormEvent) {
-    e.preventDefault()
+  <Tab>
+    ```jsx filename="SignInPage.jsx"
+    import { useSignIn } from "@clerk/clerk-react";
 
-    if (!isLoaded && !signIn) return null
-
-    try {
-      // Use the code provided by the user and attempt verification
-      const completeSignIn = await signIn.attemptFirstFactor({
-        strategy: 'phone_code',
-        code
-      })
-
-      // This mainly for debuggin while developing.
-      // Once your Instance is setup this should not be required.
-      if (completeSignIn.status !== 'complete') {
-        console.error(JSON.stringify(completeSignIn, null, 2))
-      }
-
-      // If verification was completed, create a session for the user
-      if (completeSignIn.status === 'complete') {
-        await setActive({ session: completeSignIn.createdSessionId });
-
-        // Redirect user 
-        router.push("/")
-      }
-    }
-    catch (err) {
-      // See https://clerk.com/docs/custom-flows/error-handling for more on error handling
-      console.error('Error:', JSON.stringify(err, null, 2))
-    }
-  }
-
-  if (verifying) {
-    return (
-      <form onSubmit={handleVerification}>
-        <label id="code">Code</label>
-        <input value={code} id="code" name="code" onChange={(e) => setCode(e.target.value)} />
-        <button type="submit">Verify</button>
-      </form>
-    )
-  }
-
-  return (
-    <form onSubmit={handleSubmit}>
-      <label id="phone">Phone</label>
-      <input value={phone} id="phone" name="phone" type="tel" onChange={(e) => setPhone(e.target.value)} />
-      <button type="submit">Send Code</button>
-    </form>
-  );
-}
-```
-
-```jsx filename="SignInPage.jsx"
-import { useSignIn } from "@clerk/clerk-react";
-
-function SignInPage() {
-    const { signIn,setActive } = useSignIn();
-    
-    async function onClick(e) {
-        e.preventDefault();
-        // Kick off the sign-in process, passing the user's 
-        // authentication identifier. In this case it's their
-        // phone number.
-        const { supportedFirstFactors } = await signIn.create({ 
-            identifier: "+11111111111",
-        });
+    function SignInPage() {
+        const { signIn,setActive } = useSignIn();
         
-        // Find the phoneNumberId from all the available first factors for the current sign in
-        const firstPhoneFactor = supportedFirstFactors.find(factor => {
-          return factor.strategy === 'phone_code'
-        });
-        
-        const { phoneNumberId } = firstPhoneFactor;
+        async function onClick(e) {
+            e.preventDefault();
+            // Kick off the sign-in process, passing the user's 
+            // authentication identifier. In this case it's their
+            // phone number.
+            const { supportedFirstFactors } = await signIn.create({ 
+                identifier: "+11111111111",
+            });
+            
+            // Find the phoneNumberId from all the available first factors for the current sign in
+            const firstPhoneFactor = supportedFirstFactors.find(factor => {
+              return factor.strategy === 'phone_code'
+            });
+            
+            const { phoneNumberId } = firstPhoneFactor;
 
-        // Prepare first factor verification, specifying 
-        // the phone code strategy.
-        await signIn.prepareFirstFactor({ 
-            strategy: "phone_code", 
-            phoneNumberId,
-        });
+            // Prepare first factor verification, specifying 
+            // the phone code strategy.
+            await signIn.prepareFirstFactor({ 
+                strategy: "phone_code", 
+                phoneNumberId,
+            });
 
-        // Attempt to verify the user providing the
-        // one-time code they received.
-        await signIn.attemptFirstFactor({
-            strategy: "phone_code",
-            code: "123456",
-        });
+            // Attempt to verify the user providing the
+            // one-time code they received.
+            await signIn.attemptFirstFactor({
+                strategy: "phone_code",
+                code: "123456",
+            });
+            
+            await setActive({sessionId: signIn.createdSessionId});
+        }
         
-        await setActive({sessionId: signIn.createdSessionId});
+        return (
+            <button onClick={onClick}>
+                Sign in without password
+            </button>
+        );
     }
-    
-    return (
-        <button onClick={onClick}>
-            Sign in without password
-        </button>
-    );
-}
-```
+    ```
+  </Tab>
 
-```js filename="SignInPage.js"
-const { client } = window.Clerk;
-// Kick off the sign-in process, passing the user's 
-// authentication identifier. In this case it's their
-// phone number.
-const { supportedFirstFactors } = await client.signIn.create({ 
-    identifier: "+11111111111",
-});
+  <Tab>
+    ```js filename="SignInPage.js"
+    const { client } = window.Clerk;
+    // Kick off the sign-in process, passing the user's 
+    // authentication identifier. In this case it's their
+    // phone number.
+    const { supportedFirstFactors } = await client.signIn.create({ 
+        identifier: "+11111111111",
+    });
 
-// Find the phoneNumberId from all the available first factors for the current sign in
-const firstPhoneFactor = supportedFirstFactors.find(factor => {
-  return factor.strategy === 'phone_code'
-});
-        
-const { phoneNumberId } = firstPhoneFactor;
+    // Find the phoneNumberId from all the available first factors for the current sign in
+    const firstPhoneFactor = supportedFirstFactors.find(factor => {
+      return factor.strategy === 'phone_code'
+    });
+            
+    const { phoneNumberId } = firstPhoneFactor;
 
-// Prepare first factor verification, specifying 
-// the phone code strategy.
-await signIn.prepareFirstFactor({ 
-    strategy: "phone_code", 
-    phoneNumberId,
-});
+    // Prepare first factor verification, specifying 
+    // the phone code strategy.
+    await signIn.prepareFirstFactor({ 
+        strategy: "phone_code", 
+        phoneNumberId,
+    });
 
-// Attempt to verify the user providing the
-// one-time code they received.
-await signIn.attemptFirstFactor({
-    strategy: "phone_code",
-    code: "123456",
-});
-```
-</CodeBlockTabs>
+    // Attempt to verify the user providing the
+    // one-time code they received.
+    await signIn.attemptFirstFactor({
+        strategy: "phone_code",
+        code: "123456",
+    });
+    ```
+  </Tab>
+</Tabs>
 
 You can also achieve passwordless sign-ins with an email address. Simply pass the value `email_code` as the first factor strategy. Just make sure you've collected the user's email address first. You can find all available methods in the [`SignIn`](/docs/references/javascript/sign-in/sign-in) object documentation.
