--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -164,7 +164,7 @@ export const CustomOrgSwitcher = () => {
 #### Set an active organization based on the URL
 
 <Callout type="warning">
-  This approach still depends one the `setActive` method which only runs on the client. Due to this limitation, during SSR it is possible that `orgId` from `auth()` returns an incorrect value that does not match the organiaztion id in the URL.
+  This approach still depends on the `setActive` method, which only runs on the client. Due to this limitation, during SSR, it is possible that `orgId` from `auth()` returns an incorrect value that does not match the organization ID in the URL.
 </Callout>
 
 In some cases, you might want to set an active organization based on the URL. For example, if you have a URL like `/organizations/org_123`, you might want to set `org_123` as the active organization.
@@ -206,7 +206,7 @@ export function SyncActiveOrganization() {
 }
 ```
 
-We can now use the helper we created above inside a Layout that is directly inside the Dynamic Route with the `orgId` param.
+Now you can place the `SyncActiveOrganization` helper that you created above in a [layout](https://nextjs.org/docs/app/building-your-application/routing/pages-and-layouts#layouts) and use the layout for all pages that require an active organization. In the example below, the `SyncActiveOrganization` component will run on every page in the `/app/[orgId]` directory.
 
 ```tsx filename="app/[orgId]/layout.tsx"
 
@@ -222,8 +222,6 @@ export default function OrganizationLayout(props: PropsWithChildren) {
   );
 }
 ```
-
-
 
 ### Limit access to users with active organizations only
 
@@ -360,7 +358,7 @@ Now that you have configured your middleware to redirect users to the `/org-sele
 
 #### Limit access using an App Router layout
 
-In Next.js App Router applications, instead of using `authMiddleware`, you also have the option to use a [layout](https://nextjs.org/docs/app/building-your-application/routing/pages-and-layouts#layouts) to limit access to users with active organizations only.
+In Next.js App Router applications, instead of using `authMiddleware`, you also have the option to use a layout to limit access to users with active organizations only.
 
 In the example below, a component called `RequiredActiveOrgLayout` is created. This component will be used as a layout for all pages that require an active organization. If the user has an active organization, the route the user is visting will be rendered. If the user does not have an active organization, the organization selection page will be rendered.
 
